<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.demetrius</groupId>
    <artifactId>file-agent-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>file-agent-parent</name>
    <description>文件驱动的智能 Agent — DDD 多模块聚合工程</description>

    <modules>
        <module>fileagent-common</module>
        <module>fileagent-api</module>
        <module>fileagent-session</module>
        <module>fileagent-document</module>
        <module>fileagent-chat</module>
        <module>fileagent-action</module>
        <module>fileagent-starter</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-ai.version>2.0.0</spring-ai.version>
        <springdoc.version>3.1.0</springdoc.version>
        <pdfbox.version>2.0.32</pdfbox.version>
        <poi.version>5.2.5</poi.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 模块间依赖版本统一 -->
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-session</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-document</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-chat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.demetrius</groupId>
                <artifactId>fileagent-action</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Swagger -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- 各接口模块用于 @Tag/@Operation 等 Swagger 注解的轻量依赖（不引入 springdoc 运行时） -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>2.2.54</version>
            </dependency>

            <!-- 文档解析：PDFBox 抽取 PDF 文本层与文档信息（M1 提前引入） -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <!-- 文档解析：POI 解析 Office 格式（DOCX/XLSX，M1 提前引入） -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- 全局：Lombok + 测试，所有子模块共享 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
